@@ -21,6 +21,12 @@ Changes in lattice 0.20
  o "spline" added as a possibly 'type' in panel.xyplot(), following a
    suggestion from Patrick Breheny.
 
+ o Support for traditional graphics-like log scale annotation, using
+   'scales=list(equispaced.log = FALSE)'.
+
+
+
+
 Changes in lattice 0.19
 =======================
 
